--- a/blog/templates/blog/read_post.html
+++ b/blog/templates/blog/read_post.html
@@ -22,7 +22,9 @@
         <div class="col-sm-10 col-md-9">
             <h3>{{ post.title }}</h3>
             
+            {% if post.image %}
             <img src="{{ MEDIA_URL }}{{ post.image }}"/>
+             {% endif %}
             
             <div class="row">
                 <div class="col-xs-9">
